# code4c

./: .gitignore  CMakeLists.txt  builder.ui  const.c
include/: factorial.h
src/: array.c  cond_macro.c  const.c  factorial.c  gtk_hello.c  guess_number.c  hello_world.c  liburl.c  macro_func.c  point.c  string.c  thread.c  xml_layout.c
utils/: CMakeLists.txt  math.c
utils/include/: math.h
